added scripts to install frontend-dependencies & run bothServers atatime

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "social media for developers, quite same as Linkedin.",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix frontend",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run cliend\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "concurrently": "^4.0.1",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.0",
