--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
