--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
