--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-moment": "^0.8.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
