--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.0",
     "react-moment": "^0.8.0",
     "react-redux": "^5.0.7",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "validator": "^9.4.1"
