--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "homepage": "https://github.com/ganesh-deshmukh/connect-geeks#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "concurrently": "^3.5.1",
-    "express": "^4.16.3",
-    "gravatar": "^1.6.0",
-    "jsonwebtoken": "^8.2.0",
-    "mongoose": "^5.0.12",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "validator": "^9.4.1"
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.18.2",
+    "concurrently": "3.5.1",
+    "express": "4.16.3",
+    "gravatar": "1.6.0",
+    "jsonwebtoken": "8.2.0",
+    "mongoose": "5.4.0",
+    "passport": "0.4.0",
+    "passport-jwt": "4.0.0",
+    "validator": "9.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.3"
+    "nodemon": "1.17.3"
   }
 }
